0.02 2016-04-25
    - make the number of previewed lines configurable

0.01 2016-04-25
    - initial release